# NeoFish

./: .env.example  README.md  _agent_runner.py  agent.py  background_manager.py  main.py  pyproject.toml  run_qq.py  run_telegram.py  session.py
frontend/src/: App.vue
frontend/src/components/: ChatHistoryPanel.vue  MainInput.vue  Sidebar.vue  ThinkingChain.vue
frontend/src/composables/: useChatHistory.ts
frontend/src/locales/: en.json  zh.json
